--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev:build": "npm run build && npm run start"
   },
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "concurrently": "^9.2.1"
