feat: implement day block tracker UI with theme support
- Add Shadcn UI components and theme configuration
- Implement time tracking with 10-minute blocks
- Add light/dark theme toggle
- Set up basic logging system
- Update server to serve static files
- Add .gitignore for build outputs

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-.git
-
+# Dependencies
 node_modules/
+
+# Environment variables
 .env
+
+# Build output
+ui/build/
+build/
+
+# Features file
+FEATURES.md
